hphp/hack/test/typecheck/splat/typed_printf.php.exp
ERROR: File "typed_printf.php", line 43, characters 31-38:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 43, characters 12-28:
  Expected `int` because of the `%d` format specifier
  File "typed_printf.php", line 43, characters 34-38:
  But got `bool`
ERROR: File "typed_printf.php", line 43, characters 31-38:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 43, characters 12-28:
  Expected `string` because of the `%s` format specifier
  File "typed_printf.php", line 43, characters 31-31:
  But got `int`
ERROR: File "typed_printf.php", line 44, characters 31-33:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 44, characters 12-28:
  Expected `(string, int)`
  File "typed_printf.php", line 44, characters 31-33:
  But got `(string)`
ERROR: File "typed_printf.php", line 48, characters 38-45:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 48, characters 19-35:
  Expected `int` because of the `%d` format specifier
  File "typed_printf.php", line 48, characters 41-45:
  But got `bool`
ERROR: File "typed_printf.php", line 48, characters 38-45:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 48, characters 19-35:
  Expected `string` because of the `%s` format specifier
  File "typed_printf.php", line 48, characters 38-38:
  But got `int`
ERROR: File "typed_printf.php", line 49, characters 38-40:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 49, characters 19-35:
  Expected `(string, int)`
  File "typed_printf.php", line 49, characters 38-40:
  But got `(string)`
ERROR: File "typed_printf.php", line 54, characters 45-52:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 54, characters 26-42:
  Expected `int` because of the `%d` format specifier
  File "typed_printf.php", line 54, characters 48-52:
  But got `bool`
ERROR: File "typed_printf.php", line 54, characters 45-52:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 54, characters 26-42:
  Expected `string` because of the `%s` format specifier
  File "typed_printf.php", line 54, characters 45-45:
  But got `int`
ERROR: File "typed_printf.php", line 55, characters 45-47:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 55, characters 26-42:
  Expected `(string, int)`
  File "typed_printf.php", line 55, characters 45-47:
  But got `(string)`
ERROR: File "typed_printf.php", line 61, characters 15-25:
Invalid argument (Typing[4110])
  File "printf.hhi", line 54, characters 31-35:
  Expected `float`
  File "typed_printf.php", line 61, characters 24-25:
  But got `int`
ERROR: File "typed_printf.php", line 62, characters 15-16:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 60, characters 27-57:
  Expected `(?arraykey, mixed, ?float)`
  File "typed_printf.php", line 60, characters 27-57:
  This type argument to `HH\TypedFormatString` must match exactly (it is invariant)
  File "typed_printf.php", line 37, characters 39-40:
    via this generic `Ta`
  File "typed_printf.php", line 62, characters 15-16:
  But got `(int)`
ERROR: File "typed_printf.php", line 68, characters 17-26:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 66, characters 30-40:
  Expected `string` because of the `%s` format specifier
  File "typed_printf.php", line 68, characters 17-21:
  But got `bool`
ERROR: File "typed_printf.php", line 68, characters 17-26:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 66, characters 42-54:
  Expected `int` because of the `%d` format specifier
  File "typed_printf.php", line 68, characters 24-26:
  But got `float`
ERROR: File "typed_printf.php", line 72, characters 12-19:
Invalid format string `%` in `"Test %"` (Typing[4038])
  File "typed_printf.php", line 10, characters 24-24:
  You can add a new format specifier by adding `format_eof()` to `I`
ERROR: File "typed_printf.php", line 72, characters 26-30:
Invalid argument (Typing[4110])
  File "typed_printf.php", line 72, characters 12-23:
  Expected `()` because this is the result of a concatenation
  File "typed_printf.php", line 72, characters 26-30:
  But got `(string)`
